tests/transpiler/x/zig/group_by_join.zig
// Generated by Mochi Zig transpiler on 2025-07-21 11:23 +0000
const std = @import("std");

const Customer = struct {
    id: i64,
    name: []const u8,
};

const Group0 = struct {
    key: []const u8,
    items: []std.StringHashMap(i64),
};

pub fn main() void {
    const customers: [_]Customer = [_]Customer{.{ .id = 1, .name = "Alice" }, .{ .id = 2, .name = "Bob" }};
    const orders = [_]std.StringHashMap(i64){blk: { var m = std.StringHashMap(i64).init(std.heap.page_allocator); m.put("id", 100) catch unreachable; m.put("customerId", 1) catch unreachable; break :blk m; }, blk: { var m = std.StringHashMap(i64).init(std.heap.page_allocator); m.put("id", 101) catch unreachable; m.put("customerId", 1) catch unreachable; break :blk m; }, blk: { var m = std.StringHashMap(i64).init(std.heap.page_allocator); m.put("id", 102) catch unreachable; m.put("customerId", 2) catch unreachable; break :blk m; }};
    const stats = blk: {
    var groups_map = std.AutoHashMap([]const u8, std.ArrayList(std.StringHashMap(i64))).init(std.heap.page_allocator);
    for (orders) |o| {
        const k = c.name;
        if (groups_map.getPtr(k)) |arr| {
            arr.*.append(o) catch unreachable;
        } else {
            var tmp_arr = std.ArrayList(std.StringHashMap(i64)).init(std.heap.page_allocator);
            tmp_arr.append(o) catch unreachable;
            groups_map.put(k, tmp_arr) catch unreachable;
        }
    }
    var groups = std.ArrayList(Group0).init(std.heap.page_allocator);
    var it = groups_map.iterator();
    while (it.next()) |kv| {
        groups.append(.{ .key = kv.key.*, .items = kv.value.toOwnedSlice() catch unreachable }) catch unreachable;
    }
    const arr = groups.toOwnedSlice() catch unreachable;
    var result = std.ArrayList(std.StringHashMap(i64)).init(std.heap.page_allocator);
    for (arr) |g| {
        result.append(blk: { var m = std.StringHashMap(i64).init(std.heap.page_allocator); m.put("name", g.key) catch unreachable; m.put("count", std.mem.len(g)) catch unreachable; break :blk m; }) catch unreachable;
    }
    var tmp = result.toOwnedSlice() catch unreachable;
    break :blk tmp;
};
    try std.io.getStdOut().writer().print("{s}\n", .{"--- Orders per customer ---"});
    for (stats) |s| {
        try std.io.getStdOut().writer().print("{any} {s} {any}\n", .{s.name, "orders:", s.count});
    }
}
